frontend/app/assets/stylesheets/archivesspace/tree.less
@import "variables";

.archives-tree.jstree-default.jstree-focused {
  background-color: transparent;
}

.archives-tree .resource .jstree-themeicon {
  background-image: none;
}

.archives-tree-container {
  margin: -12px -20px 10px !important;
  padding: 0 0 10px;
  position: relative;
  background-color: #F3F3F3;
  #gradient > .vertical(#F3F3F3, #EDEDED);
  border-top: 1px solid #EEE;
  border-bottom: 1px solid #FFF;
  overflow: hidden;

  > .archives-tree-title {
    background-color: #eee;
    background-color: rgba(0,0,0,.025);
    padding: 5px;
    margin: 0;
    font-weight: bold;
  }

  .expand-tree:hover,
  .retract-tree:hover {
    .opacity(100);
  }

  .retract-tree {
    display: none;
  }

  .archives-tree {
    padding: 0 20px 0 0;
    margin: 0 0 0 20px;
    overflow: auto;

    &.overflow {
      .box-shadow(inset -1px 2px 3px #DDD);
    }
  }

  a > .jstree-icon {
    display: inline-block;
    width: 14px;
    height: 14px;
    .ie7-restore-right-whitespace();
    line-height: 14px;
    vertical-align: text-top;
    background-image: url(@iconSpritePath) !important;
    background-position: 14px 14px;
    background-repeat: no-repeat;
  }

  a > .jstree-icon {
    background-position: -384px -120px !important;
  }

  .jstree-open > a > .jstree-icon {
    background-position: -408px -120px !important;
  }

  .archival_object > a > .jstree-icon,
  .icon-archival_object {
    background-position: -24px  -24px !important;
  }

  .digital_object_component > a > .jstree-icon,
  .icon-digital_object_component {
    background-position: -456px -24px !important;
  }

  .new > a > .jstree-icon {
    background-position: -456px -96px !important;
  }

  .resource > a > .jstree-icon,
  .icon-resource  {
    background-position: -264px -24px !important;
  }

  .accession > a > .jstree-icon,
  .icon-accession {
    background-position: -168px -24px !important;
  }

  #archives_tree_toolbar {
    padding: 0 20px;

    .btn-group.move-node-menu .dropdown-submenu ul {
      max-width: 400px;
      max-height: 200px;
      overflow: auto;
    }
  }

  .ui-resizable-handle.ui-resizable-s {
    width: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    height: 8px;
    background-color: #EEE;
    background-image: asset-url("archivesspace/drag_handle.png");
    background-repeat: no-repeat;
    background-position: center center;
    border-top: 1px solid #DDD;
    border-bottom: 1px solid #D9D9D9;
    cursor: ns-resize;

    &:hover {
      background-color: #e9e9e9;
    }
  }

  &.ui-resizable-resizing {
    .ui-resizable-handle.ui-resizable-s {
      background-color: #e9e9e9;
    }
  }
}

.archives-tree-container.expanded {
  .box-shadow(1px 1px 5px rgba(0, 0, 0, 0.4));
  .opacity(95);
  z-index: 1000;
  background-color: #f9f9f9;

  .expand-tree {
    display:none;
  }

  .retract-tree {
    display: inline;
  }
}

.tree-navigation {
  float: right;
  margin: 0 0 0 4px;
}

